[gd_scene load_steps=5 format=3 uid="uid://cxmpm8i3rnsd1"]

[ext_resource type="Script" path="res://scripts/ball.gd" id="1_lqumv"]
[ext_resource type="Shape2D" uid="uid://cbyjc3umkfgkf" path="res://resources/ball.tres" id="2_yeapw"]
[ext_resource type="Texture2D" uid="uid://b63q7wt1gx3qd" path="res://assets/structures/boulder.png" id="3_bfjmb"]

[sub_resource type="CircleShape2D" id="CircleShape2D_yc3ng"]
radius = 41.0

[node name="Ball" type="CharacterBody2D" node_paths=PackedStringArray("death", "detector")]
collision_layer = 4
collision_mask = 5
script = ExtResource("1_lqumv")
death = NodePath("Area2D2")
detector = NodePath("Area2D")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-3, 1)
shape = ExtResource("2_yeapw")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("3_bfjmb")

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(-3, 1)
shape = SubResource("CircleShape2D_yc3ng")

[node name="Area2D2" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D2"]
position = Vector2(-3, 1)
shape = ExtResource("2_yeapw")

[node name="Timer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true
autostart = true

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_entered" from="Area2D2" to="." method="_on_area_2d_2_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
